$Id$


v0.61.3		25-Jul-2004

	upgrade:
		To resinstall the corrected dutch macro templates go into the
		examples directory and type "make dutch-macros".

	libmbse.a:
		Removed the fdn parameter from the attach and un_attach 
		functions, not needed anymore.

	mbfido:
		Changed netmail counters in the .msg import function.
		Fixed logging of 0 articles in scannews.

	mbfile:
		Fixed a bug where "mbfile k p i" didn't give the help screen.

	examples:
		Fixed 2 spelling errors in the dutch macro templates.


v0.61.2		11-Jul-2004 - 25-Jul-2004

	upgrade:
		Check if /opt/mbse/var/msgs is empty before using this version.
		Make sure that /opt/mbse/queue is empty, then close the
		bbs with "mbstat close wait". Then do the upgrade.
		In mbsetup menu 1.14 update the TCP/IP connection details.
		In the examples directory type "make macros" to update the
		macro templates. Be carefull if you have personalized versions.

	general:
		Added -fno-strict-aliasing switch to gcc to prevent some
		warnings.

	libmbse.a:
		When files are attached that should "leave" after sent (not
		truncated or removed) they are now prepended with the @
		character instead of no character. This is compatible with
		ifcico but not with other mailers, but should do no harm 
		because most mailers only look for the ^ and # characters.
		This is for test! Please check if you run mbcico together
		with other mailers. Russell??
		If you only use mbcico there will be no problems.

	libmsgbase.a:
		Removed debug logmessage from jamPack.

	mbcico:
		In the binkp driver, when files were found to transmit and
		didn't exist anymore, they are not added to the list of files
		to sent but are marked as already transmitted so they will
		be removed from the .flo file. Also, after a successfull
		session .flo files with all files marked as transmitted are
		removed. With nodes that were marked crash, this will prevent
		continuous calling.
		Changed to use direct instead of immediate mail.